# vibecoded-pysqlite

./: README.md  pyproject.toml
.github/.workflows/: python_ci.yaml
src/pysqlite/: __init__.py  cli.py
src/pysqlite/core/: __init__.py  execution_engine.py  locking.py  parser.py  storage_engine.py  storage_engine_legacy.py
tests/: test_acid_compliance.py  test_execution_engine.py  test_parser.py
